Logseq auto save

--- a/journals/2021_08_19.md
+++ b/journals/2021_08_19.md
@@ -1,2 +1,1 @@
-- Citrus Huanglongbing is an immune-mediated disease that can be treated by mitigating reactive oxygen species triggered cell death of the phloem tissues caused
-  3 by Candidatus Liberibacter asiaticus
+- Citrus Huanglongbing is an immune-mediated disease that can be treated by mitigating reactive oxygen species triggered cell death of the phloem tissues caused by Candidatus Liberibacter asiaticus
