Logseq auto save

--- a/journals/2021_10_01.md
+++ b/journals/2021_10_01.md
@@ -1,1 +1,1 @@
-- Allelic variation in two distinct Pseudomonas syringae ﬂagellin epitopes modulates the strength of plant immune responses but not bacterial motility
+- [[Allelic variation in two distinct Pseudomonas syringae ﬂagellin epitopes modulates the strength of plant immune responses but not bacterial motility]]
